# patterns

./: CMakeLists.txt  README.md
examples/: CMakeLists.txt  advanced.cpp  simpleVisitorExample.cpp
include/patterns/: Visitor.hpp
tests/: CMakeLists.txt  test.cpp
